6 files modified, 1 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div id="root">
+<div id="root">
   <stream-channel-list></stream-channel-list>
   <stream-channel>
     <stream-channel-header></stream-channel-header>
@@ -10,5 +10,4 @@
       <stream-message-input mode="thread"></stream-message-input>
     </stream-thread>
   </stream-channel>
-</div> -->
-hello
+</div>
