--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import '~stream-chat-angular/src/assets/styles/v2/css/index.css';
+@import '@radix-ui/colors/sage.css';
+@import '@radix-ui/colors/mint.css';
 
 html {
   height: 100%;
